# njord2026_ws

./: .gitignore  .gitmodules  README.md  export_python_path.sh  requirements.txt  requirements_pure_python.txt
src/behavior/: README.md
src/behavior/plugin/action/: configure_system.cpp
src/behavior/system_manager/: CMakeLists.txt  package.xml
src/behavior/system_manager/include/system_manager/: node.hpp
src/behavior/system_manager/src/: main.cpp  node.cpp
src/behavior/tree/: task1.xml
src/bt/: README.md
src/detection/pcl_det/: CMakeLists.txt  package.xml
src/detection/scan_matching/icp_base/: README.md
src/detection/scan_matching/ndt_base/: README.md
src/detection/yolo/: package.xml  setup.py
src/detection/yolo/config/: abuot_model.md
src/detection/yolo/launch/: yolo.launch.py
src/detection/yolo/yolo/: main.py
src/driver/camera/usb_camera_driver/: CMakeLists.txt  README.md  package.xml
src/driver/camera/usb_camera_driver/include/usb_camera_driver/: composable_node.hpp  via_mjpg_streamer.hpp
src/driver/camera/usb_camera_driver/launch/: calibration.launch.py
src/driver/camera/usb_camera_driver/src/: composable_node.cpp  via_mjpg_streamer.cpp
src/driver/gnss/drogger_bt/: CMakeLists.txt  package.xml
src/driver/gnss/drogger_bt/config/: config.yaml
src/driver/gnss/drogger_bt/include/drogger_bt/: node.hpp
src/driver/gnss/drogger_bt/launch/: launch.py
src/driver/gnss/drogger_bt/src/: connect.sh  main.cpp  node.cpp
src/driver/gnss/drogger_rws/: CMakeLists.txt  package.xml
src/driver/gnss/drogger_rzs/: CMakeLists.txt  package.xml
src/driver/gnss/um982_driver/: CMakeLists.txt  package.xml
src/driver/gnss/um982_driver/include/um982_driver/: node.hpp  ref.py  types.hpp  utils.hpp
src/driver/gnss/um982_driver/launch/: um982.launch.py
src/driver/gnss/um982_driver/src/: main.cpp  node.cpp  utils.cpp
src/driver/imu/sonota/: README.md
src/driver/micon/bms/: CMakeLists.txt  package.xml
src/driver/micon/kinematics/: CMakeLists.txt  package.xml
src/driver/micon/kinematics/config/: config.yaml
src/driver/micon/kinematics/include/kinematics/: node.hpp
src/driver/micon/kinematics/src/: main.cpp  node.cpp
src/driver/micon/micon_driver_fd/: README.md
src/driver/thruster/kinematics/: README.md
src/driver/thruster/kinematics/launch/: withSocketCan.launch.py
src/driver/thruster/micon_driver_fd/: CMakeLists.txt  package.xml
src/navigation/path_follower/: README.md
src/navigation/path_generator/dijkstra/src/: advance_flag_header.py
src/njord_interfaces/: CMakeLists.txt  package.xml
src/njord_interfaces/action/: ConfigureSystem.action
src/njord_interfaces/msg/: Bms.msg  Thruster.msg
src/path_generator/dijkstra/: README.md
src/path_generator/dijkstra/src/: advance_flag.py
src/robot/: CMakeLists.txt  README.md  package.xml
src/robot/config/: ekf_global.yaml  ekf_local.yaml  ekf_original.yaml  foxglove_layout.json  nav2_mintest.yaml  nav2_params.yaml  thruster_config.yaml
src/robot/launch/: all.launch.py  localization.launch.py  nav2_mintest.launch.py  navigation.launch.py
src/robot/rviz/: nav2_mintest.rviz
src/robot/urdf/: robot.urdf.xacro  robot.urdf_modified.urdf
src/simple_sim/: package.xml  setup.py
src/simple_sim/simple_sim/: send_square_goal.py  send_square_goal_v2.py  simple_purepursuit.py  simple_sim_node.py  square_path.py
