<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="oswystk15662@keio.jp">osw</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <execute_depend>rclpy</execute_depend>
  <execute_depend>std_msgs</execute_depend>
  <execute_depend>sensor_msgs</execute_depend>
  <execute_depend>cv_bridge</execute_depend>
  <execute_depend>vision_msgs</execute_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
